add simple calculator, using input value

--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@ body {
 
 .calculator {
   border-radius: 12px;
-  box-shadow: 0 0 40px 0px rgba(0, 0, 0, 0.15);
+  box-shadow: 10px 0 50px 20px rgba(0, 0, 0, 0.15);
   margin: 20px auto;
   max-width: 240px;
   overflow: hidden;
@@ -15,7 +15,7 @@ body {
 .calculator-display {
   background-color: #222222;
   color: #fff;
-  font-size: 1.714285714em;
+  font-size: 28px;
   padding: 8px 12px;
   text-align: right;
   height: 70px;
@@ -29,10 +29,11 @@ body {
 }
 
 .calculator-content > * {
-  background-color: #fff;
+  background-color: #bdb6b6; 
   padding: 8px 20px;
   position: relative;
   text-align: center;
+  color: #fff;
 }
 
 .calculator-content > *:active::before,
@@ -50,7 +51,7 @@ body {
 }
 
 .operator {
-  background-color: #eee;
+  background-color: #bdb6b6;
 }
 
 .equal {
